--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My second web page</title>
-</head>
-<body>
+    <title>My first web page</title>
+    </head>
+    <body>
     <h1>Jesse's web page!!!!</h1>
-</body>
+    </body>
 </html>
