--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
         <h5>Course-Specific Learning Outcomes:
             
         Upon completion of this course, you will have a comprehensive understanding of the key concepts of interactivity, user experience design, and information architecture in web-based environments. You will also be able to identify and utilize the appropriate technologies to address interactive design challenges. Furthermore, you will have the skills to analyze user needs, organize information, and create effective navigation strategies. Additionally, you will be proficient in controlling the visual aspects of typography, color, and layouts through scripting languages and coding, ensuring compatibility across multiple platforms. Lastly, you will be able to critically evaluate web projects based on user-centered design principles.</h5>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     </body>
 </html>
