--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body> 
         <h1>Interactive Media</h1> 
-        <a href="../index.html">Go to week 2</a>
+        <a href="Week 2/index.html">Go to Week 2</a>
         <h2>Instructor: Dr. Rohit Ashok Khot</h2>
         <ul>
         <li>Group 1: Every Tuesday (09:30 am - 12:30 pm) </li>
