--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">Go to week 2</a>
+    <a href="../index.html">Go back</a>
 </body>
 </html>
