--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <a href="../index.html">Go back</a>
+    <header>
+        <ul>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Projects</li>
+        </ul>
+    </header>
 </body>
 </html>
