--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body> 
         <h1>Interactive Media</h1> 
         <a href="Week 2/index.html">Go to Week 2</a>
-        <img alt="this is a cat" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"/>
+        <img alt="this is a cat" width=100 height=100 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/15/Cat_August_2010-4.jpg/1200px-Cat_August_2010-4.jpg"/>
         <img src="cat.jpg" alt="this is a cat"/>
         <h2>Instructor: Dr. Rohit Ashok Khot</h2>
         <ul>
