--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -8,6 +8,7 @@
 <body>
     <a href="../index.html">Go back</a>
     <header>
+        <img src="" alt=""/>
         <ul>
             <li>About</li>
             <li>Contact</li>
