--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS exercise</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geostar+Fill&display=swap" rel="stylesheet">
     <!-- <style>
         h1 {
          color: red;
@@ -19,8 +22,9 @@
    <span>Email: rohitashok.khot@rmit.edu.au</span> (Weekdays 9am-5pm)
     </h2>
     <ul>
-        <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
-        <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
+        <li><strong>Group 1: Every Tuesday (09:30 am - 12:30 pm)</strong></li>
+        <li>   
+            <h3>Group 2: <strong>Every Tuesday (01:30 pm - 04:30 pm)</strong></h3></li>
         <li>Group 3: Every Thursday (09:30 am - 12:30 pm)</li>
         <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
     </ul>
