--- a/Week 4/Index.html
+++ b/Week 4/Index.html
@@ -17,7 +17,7 @@
 <body>
     <h1> Week 4 class </h1>
     <div class="outer"></div>
-    <p>Hellow world <a href="# style.css">link 1</a></p>
+    <p>Hello world <a href="# style.css">link 1</a></p>
     <p>Hello again <span>Jesse</span></p>
     <p>Lorem, ipsum dolor.</p>
 </body>
