--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first web page</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    </head>
-    <body> 
-        <h1>Interactive Media</h1> 
-        <a href="Week 2/index.html">Go to Week 2</a>
-        <img alt="this is a cat" width=100 height=100 src="cat.jpg" alt="this is a cat"/>
-        <h2>Instructor: Dr. Rohit Ashok Khot</h2>
-        <ul>
-        <li>Group 1: Every Tuesday (09:30 am - 12:30 pm)</li>
-        <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
-        <li>Group 3: Every Thursday (09:30 am - 12:30 pm)</li>
-        <li>Group 4: Every Thursday (01:30 pm - 04:30 pm)</li>
-        </ul>
-        <h3>Venue: 09.02.20 (Tuesday) & 09.02.19 (Thursday)</h3>
-        <h4>Welcome to Interactive Media 1! 
-        
-        Interactive Media 1 is about enabling you to engage with the fundamentals of interaction design through the use of web programming. Our focus will be on building up from the basic principles of programming, covering the standard web languages - HTML, CSS and JavaScript, in order to be able to select and use appropriate programming languages, together with core concepts of interaction design, in service of your broader digital design goals.</h4>
-        <h5>Course-Specific Learning Outcomes:
-            
-        Upon completion of this course, you will have a comprehensive understanding of the key concepts of interactivity, user experience design, and information architecture in web-based environments. You will also be able to identify and utilize the appropriate technologies to address interactive design challenges. Furthermore, you will have the skills to analyze user needs, organize information, and create effective navigation strategies. Additionally, you will be proficient in controlling the visual aspects of typography, color, and layouts through scripting languages and coding, ensuring compatibility across multiple platforms. Lastly, you will be able to critically evaluate web projects based on user-centered design principles.</h5>
-    </body>
+    <title>A1</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="gradient-background">
+</body>  
+<body>  
+    <div class="container">
+        <h1>A1: Interactive Experience Research Project</h1>
+        <h2>Analysis of <a href="https://www.myoungaekim.com/" target="_blank">https://www.myoungaekim.com/</a></h2>
+        <div class="outer">
+            <div class="inner"><a href="first_thing.html">What was the first thing you paid attention to when interacting with the experience?</a></div>
+            <div class="inner"><a href="discrete_actions.html">Spend two minutes with the experience and create a list of each of your discrete actions...</a></div>
+            <div class="inner"><a href="most_engaging.html">What part of the experience did you spend the most time engaging with?</a></div>
+            <div class="inner"><a href="common_action.html">What was the most common action in your two-minute interaction with the experience?</a></div>
+            <div class="inner"><a href="primary_goal.html">What is your impression of the intended primary goal of the interactive experience?</a></div>
+            <div class="inner"><a href="communicate_goal.html">How does the interactive experience communicate this primary goal?</a></div>
+            <div class="inner"><a href="interaction_over_time.html">What is your impression of how the experience should be interacted with over time?</a></div>
+            <div class="inner"><a href="communicate_interaction.html">How does the interactive experience communicate how it should be interacted with over time?</a></div>
+            <div class="inner"><a href="media_reference.html">What other media forms (digital or otherwise) does the experience reference?</a></div>
+            <div class="inner"><a href="reference_action.html">What does this reference/s communicate to you about how you should act when engaging with your research experience?</a></div>
+            <div class="inner"><a href="reference_feel.html">What does this reference/s communicate to you about how you should feel when engaging with your research experience?</a></div>
+            <div class="inner"><a href="frustrating_interaction.html">What is the most frustrating part of the interaction to you, and what makes that part frustrating?</a></div>
+        </div>
+    </div>
+</body>
 </html>
